--- a/src/OpenGL/OpenGL.vcxproj
+++ b/src/OpenGL/OpenGL.vcxproj
@@ -145,23 +145,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DeathStar.cpp" />
     <ClCompile Include="glad.c" />
+    <ClCompile Include="space.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="textures\chest.png" />
-    <Image Include="textures\crafting_table.png" />
-    <Image Include="textures\dark_wood.png" />
-    <Image Include="textures\emerald.png" />
-    <Image Include="textures\furnace.png" />
-    <Image Include="textures\gold.png" />
-    <Image Include="textures\gray_wool.png" />
-    <Image Include="textures\hay_bale.png" />
-    <Image Include="textures\nether.png" />
-    <Image Include="textures\tnt.png" />
-    <Image Include="textures\white_wood.png" />
-    <Image Include="textures\white_wool.png" />
-    <Image Include="textures\wood.png" />
+    <None Include="shaders\cubemaps.fs" />
+    <None Include="shaders\cubemaps.vs" />
+    <None Include="shaders\skybox.fs" />
+    <None Include="shaders\skybox.vs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="textures\container.jpg" />
+    <Image Include="textures\skybox\back.jpg" />
+    <Image Include="textures\skybox\bottom.jpg" />
+    <Image Include="textures\skybox\front.jpg" />
+    <Image Include="textures\skybox\left.jpg" />
+    <Image Include="textures\skybox\right.jpg" />
+    <Image Include="textures\skybox\top.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
