--- a/src/OpenGL/OpenGL.vcxproj.filters
+++ b/src/OpenGL/OpenGL.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClCompile Include="glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="space.cpp">
+    <ClCompile Include="ExamenBimestral2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
